--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+body{
+  font-size: 10px; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div{
+  width: 20vw;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  font-size: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+form{
+  border: 2px solid orange;
+  padding: 2rem 1rem 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+label{
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  font-size: 1rem;
+  outline: none;
+  border: 0;
+  border-bottom: 2px solid red;
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+button{
+  border: 2px solid green;
+  font-size: 1.5rem;
+  background: none;
+  width: 100%;
+  cursor: pointer;
 }
